--- a/link-text-location-copier/options/index.html
+++ b/link-text-location-copier/options/index.html
@@ -137,7 +137,8 @@
       </form>
     </dialog>
 
-    <script src="../defaults.js"></script>
+    <script type="application/javascript" src="../browser-polyfill.js"></script>
+	<script src="../defaults.js"></script>
     <script src="options.js"></script>
   </body>
 </html>
